[build-system]
requires = ["setuptools>=44.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rutube-downloader"
version = "0.0.8.8"
authors = [
    { email = "arch1_cs@mail.ru" },
]
description = "This is the simplest module for download videos from Rutube"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
"setuptools>=44.0.0", "requests>=2.31.0", "alive-progress>=3.1.4", "m3u8-old-python @ git+https://github.com/SnowFlash383935/m3u8.git; python_version<'3.12'",
"m3u8; python_version>='3.12'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Valentin-Butorin/rutube_downloader"
Repository = "https://github.com/Valentin-Butorin/rutube_downloader.git"
