[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rutube"]

[project]
name = "rutube-downloader"
version = "0.0.8.8"
authors = [
    { email = "snowflash383935@mail.ru" },
]
description = "This is the simplest module for download videos from Rutube"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25",
    "alive-progress>=3.1.4",
    "m3u8>=3.5.0; python_version>='3.12'",
    "m3u8-old-python @ git+https://github.com/SnowFlash383935/m3u8.git ; python_version<'3.12'"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SnowFlash383935/rutube_downloader_playlists"
Repository = "https://github.com/SnowFlash383935/rutube_downloader_playlists.git"
